# cgo-ffi

./: .gitignore  CLAUDE.md  GO_FFI.md  Makefile  README.md  demo  ffi.go  ffi_test.go  go.mod  init.sh  native.go  vector.c  vector.h
cmd/: main.go
docs/: FEATURES.md  GOALS.md  GUIDE.md  ISSUES.md
matcher/: PLAN.md  go.mod  go.sum  matcher  matchx
matcher/cmd/: main.go
matcher/go/: matcher.go  matcher_test.go
matcher/testdata/: malware_patterns.go  simple_patterns.go  test_filenames.go
matcher/vectorscan/: matcher.go  matcher_test.go
matcher/wasm/: Dockerfile  Makefile  README.md  VECTORSCAN_PR.md  build.sh  docker-build.sh  vectorscan-wasm.patch
matcher/wasm/docker/: Dockerfile  build-wasm.sh  vectorscan-wasm.patch
matcher/wasm/host/: config_cgo.go  escape_test.go  matcher.go  matcher_test.go
matcher/wasm/host/cmd/matcher/: main.go
matcher/wasm/src/: matcher.c  matcher.cpp
wasm/: README.md  build.sh
wasm/c/: vector_wasm.c
wasm/cmd/: main.go
wasm/host/: wasm.go  wasm_test.go
wasm/rust/: Cargo.toml
wasm/rust/src/: lib.rs
wasm/tinygo/: main.go
wasm/wit/: vector.wit
