[package]
name = "vector-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# No dependencies needed for core module approach

[profile.release]
opt-level = 3
lto = "fat"              # Full LTO for maximum optimization
codegen-units = 1        # Single codegen unit for better optimization
strip = true             # Strip symbols
panic = "abort"          # No unwinding - smaller code
overflow-checks = false  # Skip overflow checks in release
